fix for https://issuetracker.google.com/issues/260847161

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -171,7 +171,8 @@ android {
     }
 
     buildFeatures {
-        viewBinding true
+        buildConfig = true
+        viewBinding = true
     }
 
     testOptions {
