--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,7 @@ ext {
     androidx_window_version = '1.1.0-alpha04'
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = '1.8.0-alpha03'
+    google_material_version = '1.8.0-beta01'
 
     // https://jsoup.org/
     jsoup_version = '1.15.3'
