--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ plugins {
     id 'com.android.library' version '8.0.0-alpha10' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     // https://github.com/mannodermaus/android-junit5
-    id 'de.mannodermaus.android-junit5' version '1.8.2.1' apply false
+    // https://github.com/mannodermaus/android-junit5/issues/290
+//    id 'de.mannodermaus.android-junit5' version '1.8.2.1' apply false
 }
 
 task clean(type: Delete) {
