--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ ext {
     androidx_exifinterface_version = '1.3.5'
     androidx_fragment_version = '1.6.0-alpha04'
     androidx_interpolator_version = '1.0.0'
-    androidx_lifecycle_version = '2.6.0-alpha03'
+    androidx_lifecycle_version = '2.6.0-alpha04'
     androidx_preference_version = '1.2.0'
     androidx_recyclerview_version = '1.3.0-rc01'
 //        androidx_slidingpanelayout_version = '1.2.0'
@@ -80,7 +80,7 @@ ext {
     androidx_window_version = '1.1.0-alpha04'
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = '1.8.0-beta01'
+    google_material_version = '1.8.0-rc01'
 
     // https://jsoup.org/
     jsoup_version = '1.15.3'
@@ -102,7 +102,7 @@ ext {
 
     // https://developer.android.com/jetpack/androidx/releases/test
     androidx_test_core_version = '1.5.0'
-    androidx_test_runner_version = '1.5.1'
+    androidx_test_runner_version = '1.5.2'
     androidx_test_rules_version = '1.5.0'
 
     // needed for testing
