studio flamingo beta 1 / gradle 8 updates

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -185,8 +185,8 @@ android {
             returnDefaultValues = false
             all {
                 reports {
-                    junitXml.enabled = true
-                    html.enabled = false
+                    junitXml.getRequired().set(true)
+                    html.getRequired().set(false)
                 }
             }
         }
