--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id 'com.android.application' version '8.0.0-alpha09' apply false
-    id 'com.android.library' version '8.0.0-alpha09' apply false
+    id 'com.android.application' version '8.0.0-beta01' apply false
+    id 'com.android.library' version '8.0.0-beta01' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     // https://github.com/mannodermaus/android-junit5
     // https://github.com/mannodermaus/android-junit5/issues/290
