--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ ext {
     androidx_annotation_version = '1.5.0'
     androidx_appcompat_version = '1.7.0-alpha01'
     androidx_collection_version = '1.3.0-alpha02'
-    androidx_camerax_version = '1.3.0-alpha02'
+    androidx_camerax_version = '1.3.0-alpha03'
     androidx_cardview_version = '1.0.0'
     androidx_constraintlayout_core_version = '1.0.4'
     androidx_constraintlayout_version = '2.2.0-alpha01'
@@ -72,7 +72,7 @@ ext {
     androidx_exifinterface_version = '1.3.5'
     androidx_fragment_version = '1.6.0-alpha04'
     androidx_interpolator_version = '1.0.0'
-    androidx_lifecycle_version = '2.6.0-alpha04'
+    androidx_lifecycle_version = '2.6.0-alpha05'
     androidx_preference_version = '1.2.0'
     androidx_recyclerview_version = '1.3.0-rc01'
 //        androidx_slidingpanelayout_version = '1.2.0'
@@ -80,7 +80,7 @@ ext {
     androidx_window_version = '1.1.0-alpha04'
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = '1.8.0-rc01'
+    google_material_version = '1.9.0-alpha01'
 
     // https://jsoup.org/
     jsoup_version = '1.15.3'
@@ -95,7 +95,7 @@ ext {
     acra_version = '5.9.7'
 
     // https://github.com/mockito/mockito
-    mockito_version = '4.11.0'
+    mockito_version = '5.1.1'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiter_version = '5.9.2'
