--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@
 plugins {
     id 'com.android.application' version '8.0.0-beta01' apply false
     id 'com.android.library' version '8.0.0-beta01' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     // https://github.com/mannodermaus/android-junit5
     // https://github.com/mannodermaus/android-junit5/issues/290
     id 'de.mannodermaus.android-junit5' version '1.8.2.1' apply false
@@ -52,7 +52,7 @@ ext {
     // https://github.com/google/desugar_jdk_libs
     desugar_version = '2.0.0'
 
-    kotlin_version = '1.7.0'
+    kotlin_version = '1.8.0'
 
     // https://developer.android.com/jetpack/androidx/versions
 
@@ -80,7 +80,7 @@ ext {
     androidx_window_version = '1.1.0-alpha04'
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = '1.9.0-alpha01'
+    google_material_version = '1.8.0'
 
     // https://jsoup.org/
     jsoup_version = '1.15.3'
