--- a/gradle.properties
+++ b/gradle.properties
@@ -32,4 +32,5 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-android.nonFinalResIds=false
+android.nonFinalResIds=true
+# android.disableResourceValidation=true
