--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id 'com.android.application' version '8.0.0-beta02' apply false
-    id 'com.android.library' version '8.0.0-beta02' apply false
+    id 'com.android.application' version '8.0.0-beta03' apply false
+    id 'com.android.library' version '8.0.0-beta03' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     // https://github.com/mannodermaus/android-junit5
     id 'de.mannodermaus.android-junit5' version '1.8.2.1' apply false
@@ -55,9 +55,11 @@ ext {
 
     // https://developer.android.com/jetpack/androidx/versions
 
+    // 1.8 needs Android 14 !
     androidx_activity_version = '1.7.0-beta01'
+
     androidx_annotation_version = '1.5.0'
-    androidx_appcompat_version = '1.7.0-alpha01'
+    androidx_appcompat_version = '1.7.0-alpha02'
     androidx_collection_version = '1.3.0-alpha02'
     androidx_camerax_version = '1.3.0-alpha03'
     androidx_cardview_version = '1.0.0'
