--- a/core/build.gradle
+++ b/core/build.gradle
@@ -68,6 +68,14 @@ android {
 
 dependencies {
     implementation("androidx.appcompat:appcompat:${androidx_appcompat_version}")
+    // core is needed for custom constraint helpers
+    implementation("androidx.constraintlayout:constraintlayout-core:"
+            + "${androidx_constraintlayout_core_version}")
+
+    implementation("androidx.documentfile:documentfile:${androidx_documentfile_version}")
+    implementation("androidx.recyclerview:recyclerview:${androidx_recyclerview_version}")
+
+    implementation("com.google.android.material:material:${google_material_version}")
 
     // local tests use JUnit5
     testImplementation("org.mockito:mockito-core:${mockito_version}")
