--- a/core/build.gradle
+++ b/core/build.gradle
@@ -73,6 +73,7 @@ dependencies {
             + "${androidx_constraintlayout_core_version}")
 
     implementation("androidx.documentfile:documentfile:${androidx_documentfile_version}")
+    implementation("androidx.preference:preference:${androidx_preference_version}")
     implementation("androidx.recyclerview:recyclerview:${androidx_recyclerview_version}")
 
     implementation("com.google.android.material:material:${google_material_version}")
