--- a/build.gradle
+++ b/build.gradle
@@ -56,35 +56,35 @@ ext {
     // https://developer.android.com/jetpack/androidx/versions
 
     // 1.8 needs Android 14 !
-    androidx_activity_version = '1.7.0-beta01'
+    androidx_activity_version = '1.7.0-beta02'
 
-    androidx_annotation_version = '1.5.0'
+    androidx_annotation_version = '1.6.0'
     androidx_appcompat_version = '1.7.0-alpha02'
     androidx_collection_version = '1.3.0-alpha02'
-    androidx_camerax_version = '1.3.0-alpha03'
+    androidx_camerax_version = '1.3.0-alpha04'
     androidx_cardview_version = '1.0.0'
     androidx_constraintlayout_core_version = '1.0.4'
     androidx_constraintlayout_version = '2.2.0-alpha07'
     androidx_coordinatorlayout_version = '1.2.0'
-    androidx_core_version = '1.9.0'
+    androidx_core_version = '1.10.0-beta01'
     androidx_customview_version = '1.2.0-alpha02'
     androidx_documentfile_version = '1.1.0-alpha01'
     androidx_drawerlayout_version = '1.2.0-beta01'
     androidx_exifinterface_version = '1.3.6'
-    androidx_fragment_version = '1.6.0-alpha05'
+    androidx_fragment_version = '1.6.0-alpha06'
     androidx_interpolator_version = '1.0.0'
-    androidx_lifecycle_version = '2.6.0-beta01'
+    androidx_lifecycle_version = '2.6.0-rc01'
     androidx_preference_version = '1.2.0'
     androidx_recyclerview_version = '1.3.0-rc01'
 //        androidx_slidingpanelayout_version = '1.2.0'
     androidx_viewpager2_version = '1.1.0-beta01'
-    androidx_window_version = '1.1.0-alpha04'
+    androidx_window_version = '1.1.0-alpha06'
 
     // https://github.com/material-components/material-components-android/releases
     google_material_version = '1.8.0'
 
     // https://jsoup.org/
-    jsoup_version = '1.15.3'
+    jsoup_version = '1.15.4'
 
     // https://github.com/tfonteyn/TinyZXingWrapper
     tiny_zxing_wrapper_version = '1.0.0-rc01'
