--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 #
-# @Copyright 2018-2022 HardBackNutter
+# @Copyright 2018-2023 HardBackNutter
 # @License GNU General Public License
 #
 # This file is part of NeverTooManyBooks.
@@ -21,6 +21,6 @@
 #Sat Nov 26 12:07:01 GMT 2022
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-rc-2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
