--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id 'com.android.application' version '8.0.0-beta04' apply false
-    id 'com.android.library' version '8.0.0-beta04' apply false
+    id 'com.android.application' version '8.0.0-beta05' apply false
+    id 'com.android.library' version '8.0.0-beta05' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     // https://github.com/mannodermaus/android-junit5
     id 'de.mannodermaus.android-junit5' version '1.8.2.1' apply false
@@ -69,13 +69,13 @@ ext {
     androidx_core_version = '1.10.0-beta01'
     androidx_customview_version = '1.2.0-alpha02'
     androidx_documentfile_version = '1.1.0-alpha01'
-    androidx_drawerlayout_version = '1.2.0-beta01'
+    androidx_drawerlayout_version = '1.2.0-rc01'
     androidx_exifinterface_version = '1.3.6'
-    androidx_fragment_version = '1.6.0-alpha06'
+    androidx_fragment_version = '1.6.0-alpha07'
     androidx_interpolator_version = '1.0.0'
-    androidx_lifecycle_version = '2.6.0-rc01'
+    androidx_lifecycle_version = '2.6.0'
     androidx_preference_version = '1.2.0'
-    androidx_recyclerview_version = '1.3.0-rc01'
+    androidx_recyclerview_version = '1.3.0'
 //        androidx_slidingpanelayout_version = '1.2.0'
     androidx_viewpager2_version = '1.1.0-beta01'
     androidx_window_version = '1.1.0-alpha06'
@@ -96,7 +96,7 @@ ext {
     acra_version = '5.9.7'
 
     // https://github.com/mockito/mockito
-    mockito_version = '5.1.1'
+    mockito_version = '5.2.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiter_version = '5.9.2'
