--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ task clean(type: Delete) {
 
 ext {
     applicationId = "com.hardbacknutter.nevertoomanybooks"
-    applicationVersionCode = 42
-    applicationVersionName = '4.1.0'
+    applicationVersionCode = 43
+    applicationVersionName = '4.1.1'
 
     // see NOTES.txt
     // https://gs.statcounter.com/os-version-market-share/android/mobile-tablet/worldwide
@@ -60,25 +60,26 @@ ext {
 
     androidx_annotation_version = '1.6.0'
     androidx_appcompat_version = '1.7.0-alpha02'
-    androidx_collection_version = '1.3.0-alpha02'
-    androidx_camerax_version = '1.3.0-alpha04'
+    androidx_collection_version = '1.3.0-alpha04'
+    androidx_camerax_version = '1.3.0-alpha05'
     androidx_cardview_version = '1.0.0'
     androidx_constraintlayout_core_version = '1.0.4'
     androidx_constraintlayout_version = '2.2.0-alpha07'
     androidx_coordinatorlayout_version = '1.2.0'
+    // 1.12 needs Android 14 !
     androidx_core_version = '1.10.0-beta01'
     androidx_customview_version = '1.2.0-alpha02'
     androidx_documentfile_version = '1.1.0-alpha01'
-    androidx_drawerlayout_version = '1.2.0-rc01'
+    androidx_drawerlayout_version = '1.2.0'
     androidx_exifinterface_version = '1.3.6'
-    androidx_fragment_version = '1.6.0-alpha07'
+    androidx_fragment_version = '1.6.0-alpha08'
     androidx_interpolator_version = '1.0.0'
-    androidx_lifecycle_version = '2.6.0'
+    androidx_lifecycle_version = '2.6.1'
     androidx_preference_version = '1.2.0'
     androidx_recyclerview_version = '1.3.0'
 //        androidx_slidingpanelayout_version = '1.2.0'
     androidx_viewpager2_version = '1.1.0-beta01'
-    androidx_window_version = '1.1.0-alpha06'
+    androidx_window_version = '1.1.0-beta01'
 
     // https://github.com/material-components/material-components-android/releases
     google_material_version = '1.8.0'
