--- a/build.gradle
+++ b/build.gradle
@@ -63,11 +63,11 @@ ext {
     androidx_collection_version = '1.3.0-alpha04'
     androidx_camerax_version = '1.3.0-alpha05'
     androidx_cardview_version = '1.0.0'
-    androidx_constraintlayout_core_version = '1.0.4'
-    androidx_constraintlayout_version = '2.2.0-alpha07'
+    androidx_constraintlayout_core_version = '1.1.0-alpha09'
+    androidx_constraintlayout_version = '2.2.0-alpha09'
     androidx_coordinatorlayout_version = '1.2.0'
     // 1.12 needs Android 14 !
-    androidx_core_version = '1.10.0-beta01'
+    androidx_core_version = '1.11.0-alpha02'
     androidx_customview_version = '1.2.0-alpha02'
     androidx_documentfile_version = '1.1.0-alpha01'
     androidx_drawerlayout_version = '1.2.0'
