--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -18,9 +18,9 @@
 # along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
 #
 
-#Fri Mar 10 15:30:50 GMT 2023
+#Fri Apr 21 11:42:26 BST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0.2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
