--- a/build.gradle
+++ b/build.gradle
@@ -56,12 +56,12 @@ ext {
     // https://developer.android.com/jetpack/androidx/versions
 
     // 1.8 needs Android 14 !
-    androidx_activity_version = '1.7.0'
+    androidx_activity_version = '1.7.1'
 
     androidx_annotation_version = '1.6.0'
     androidx_appcompat_version = '1.7.0-alpha02'
     androidx_collection_version = '1.3.0-alpha04'
-    androidx_camerax_version = '1.3.0-alpha05'
+    androidx_camerax_version = '1.3.0-alpha06'
     androidx_cardview_version = '1.0.0'
     androidx_constraintlayout_core_version = '1.1.0-alpha09'
     androidx_constraintlayout_version = '2.2.0-alpha09'
@@ -72,7 +72,7 @@ ext {
     androidx_documentfile_version = '1.1.0-alpha01'
     androidx_drawerlayout_version = '1.2.0'
     androidx_exifinterface_version = '1.3.6'
-    androidx_fragment_version = '1.6.0-alpha09'
+    androidx_fragment_version = '1.6.0-beta01'
     androidx_interpolator_version = '1.0.0'
     androidx_lifecycle_version = '2.6.1'
     androidx_preference_version = '1.2.0'
