--- a/build.gradle
+++ b/build.gradle
@@ -72,17 +72,17 @@ ext {
     androidx_documentfile_version = '1.1.0-alpha01'
     androidx_drawerlayout_version = '1.2.0'
     androidx_exifinterface_version = '1.3.6'
-    androidx_fragment_version = '1.6.0-beta01'
+    androidx_fragment_version = '1.6.0-rc01'
     androidx_interpolator_version = '1.0.0'
     androidx_lifecycle_version = '2.6.1'
     androidx_preference_version = '1.2.0'
     androidx_recyclerview_version = '1.3.0'
 //        androidx_slidingpanelayout_version = '1.2.0'
     androidx_viewpager2_version = '1.1.0-beta01'
-    androidx_window_version = '1.1.0-beta02'
+    androidx_window_version = '1.1.0-rc01'
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = '1.9.0-beta01'
+    google_material_version = '1.9.0'
 
     //google_auto_service_version = '1.0.1'
 
