--- a/core/build.gradle
+++ b/core/build.gradle
@@ -64,6 +64,8 @@ android {
 }
 
 dependencies {
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs_nio:${desugar_version}")
+
     implementation("androidx.appcompat:appcompat:${androidx_appcompat_version}")
     // core is needed for custom constraint helpers
     implementation("androidx.constraintlayout:constraintlayout-core:"
