added czech and polish

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,8 @@ android {
 
         signingConfig signingConfigs.release
 
-        resourceConfigurations += ["en", "en_GB", "de", "fr", "nl", "pt", "es", "it", "el", "ru", "tr"]
+        resourceConfigurations += ["de", "en", "en_GB", "es", "fr", "it", "nl", "pt",
+                                   "cs", "el", "pl", "ru", "tr"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments["runnerBuilder"] =
