--- a/fastscroller/build.gradle
+++ b/fastscroller/build.gradle
@@ -23,20 +23,19 @@ plugins {
 }
 
 android {
-    namespace "com.hardbacknutter.fastscroller"
-
-    compileSdk rootProject.ext.compileSdk
+    namespace = "com.hardbacknutter.fastscroller"
+    compileSdk = rootProject.ext.compile_sdk_version
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdk = rootProject.ext.min_sdk_version
+        targetSdk = rootProject.ext.target_sdk_version
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner("androidx.test.runner.AndroidJUnitRunner")
     }
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled = true
         }
         beta {
             initWith release
@@ -46,13 +45,13 @@ android {
         }
     }
 
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
+
     lint {
-        abortOnError false
+        abortOnError = false
     }
 }
 
