--- a/build.gradle
+++ b/build.gradle
@@ -19,21 +19,21 @@
  */
 
 plugins {
-    id 'com.android.application' version '8.0.1' apply false
-    id 'com.android.library' version '8.0.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id("com.android.application") version "8.0.1" apply false
+    id("com.android.library") version "8.0.1" apply false
+    id("org.jetbrains.kotlin.android") version "1.8.0" apply false
     // https://github.com/mannodermaus/android-junit5
-    id 'de.mannodermaus.android-junit5' version '1.8.2.1' apply false
+    id("de.mannodermaus.android-junit5") version "1.8.2.1" apply false
 }
 
-tasks.register('clean', Delete) {
-    delete rootProject.buildDir
+tasks.register("clean", Delete) {
+    delete(rootProject.buildDir)
 }
 
 ext {
     applicationId = "com.hardbacknutter.nevertoomanybooks"
     applicationVersionCode = 50
-    applicationVersionName = '4.3.4'
+    applicationVersionName = "4.3.4"
 
     // see NOTES.txt
     // https://gs.statcounter.com/os-version-market-share/android/mobile-tablet/worldwide
@@ -44,74 +44,74 @@ ext {
     // 9.0      82.99
     // 8.1      88.09
     // 8.0      90.15
-    minSdkVersion = 26
-    targetSdkVersion = 33
-    compileSdk = 33
+    min_sdk_version = 26
+    target_sdk_version = 33
+    compile_sdk_version = 33
 
     // https://github.com/google/desugar_jdk_libs
-    desugar_version = '2.0.3'
+    desugar_version = "2.0.3"
 
-    kotlin_version = '1.8.0'
+    kotlin_version = "1.8.0"
 
     // https://developer.android.com/jetpack/androidx/versions
 
     // 1.8 needs Android 14 !
-    androidx_activity_version = '1.7.1'
+    androidx_activity_version = "1.7.1"
 
-    androidx_annotation_version = '1.6.0'
-    androidx_appcompat_version = '1.7.0-alpha02'
-    androidx_collection_version = '1.3.0-alpha04'
-    androidx_camerax_version = '1.3.0-alpha06'
-    androidx_cardview_version = '1.0.0'
-    androidx_constraintlayout_core_version = '1.1.0-alpha09'
-    androidx_constraintlayout_version = '2.2.0-alpha09'
-    androidx_coordinatorlayout_version = '1.2.0'
+    androidx_annotation_version = "1.6.0"
+    androidx_appcompat_version = "1.7.0-alpha02"
+    androidx_collection_version = "1.3.0-alpha04"
+    androidx_camerax_version = "1.3.0-alpha06"
+    androidx_cardview_version = "1.0.0"
+    androidx_constraintlayout_core_version = "1.1.0-alpha09"
+    androidx_constraintlayout_version = "2.2.0-alpha09"
+    androidx_coordinatorlayout_version = "1.2.0"
     // 1.12 needs Android 14 !
-    androidx_core_version = '1.11.0-alpha02'
-    androidx_customview_version = '1.2.0-alpha02'
-    androidx_documentfile_version = '1.1.0-alpha01'
-    androidx_drawerlayout_version = '1.2.0'
-    androidx_exifinterface_version = '1.3.6'
-    androidx_fragment_version = '1.6.0-rc01'
-    androidx_interpolator_version = '1.0.0'
-    androidx_lifecycle_version = '2.6.1'
-    androidx_preference_version = '1.2.0'
-    androidx_recyclerview_version = '1.3.0'
-//        androidx_slidingpanelayout_version = '1.2.0'
-    androidx_viewpager2_version = '1.1.0-beta01'
-    androidx_window_version = '1.1.0-rc01'
+    androidx_core_version = "1.11.0-alpha02"
+    androidx_customview_version = "1.2.0-alpha02"
+    androidx_documentfile_version = "1.1.0-alpha01"
+    androidx_drawerlayout_version = "1.2.0"
+    androidx_exifinterface_version = "1.3.6"
+    androidx_fragment_version = "1.6.0-rc01"
+    androidx_interpolator_version = "1.0.0"
+    androidx_lifecycle_version = "2.6.1"
+    androidx_preference_version = "1.2.0"
+    androidx_recyclerview_version = "1.3.0"
+//        androidx_slidingpanelayout_version = "1.2.0"
+    androidx_viewpager2_version = "1.1.0-beta01"
+    androidx_window_version = "1.1.0-rc01"
 
     // https://github.com/material-components/material-components-android/releases
-    google_material_version = '1.9.0'
+    google_material_version = "1.9.0"
 
-    //google_auto_service_version = '1.0.1'
+    //google_auto_service_version = "1.0.1"
 
     // https://jsoup.org/
-    jsoup_version = '1.16.1'
+    jsoup_version = "1.16.1"
 
     // https://github.com/tfonteyn/TinyZXingWrapper
-    tiny_zxing_wrapper_version = '1.0.0-rc01'
+    tiny_zxing_wrapper_version = "1.0.0-rc01"
 
     // https://github.com/zxing/zxing
-    zxing_core_version = '3.5.1'
+    zxing_core_version = "3.5.1"
 
     // https://github.com/ACRA/acra
-    acra_version = '5.9.7'
+    acra_version = "5.9.7"
 
     // https://github.com/mockito/mockito
-    mockito_version = '5.3.1'
+    mockito_version = "5.3.1"
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
-    jupiter_version = '5.9.3'
+    jupiter_version = "5.9.3"
 
     // https://developer.android.com/jetpack/androidx/releases/test
-    androidx_arch_core_testing = '2.2.0'
-    androidx_test_core_version = '1.5.0'
-    androidx_test_runner_version = '1.5.2'
-    androidx_test_rules_version = '1.5.0'
+    androidx_arch_core_testing = "2.2.0"
+    androidx_test_core_version = "1.5.0"
+    androidx_test_runner_version = "1.5.2"
+    androidx_test_rules_version = "1.5.0"
 
     // needed for testing
-    kotlinx_coroutines_core = '1.5.2'
+    kotlinx_coroutines_core = "1.5.2"
 
-    mannodermaus_version = '1.3.0'
+    mannodermaus_version = "1.3.0"
 }
