--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 /*
- * @Copyright 2018-2021 HardBackNutter
+ * @Copyright 2018-2023 HardBackNutter
  * @License GNU General Public License
  *
  * This file is part of NeverTooManyBooks.
@@ -32,20 +32,20 @@ dependencyResolutionManagement {
         mavenCentral()
 
         ivy {
-            url "https://github.com/tfonteyn/"
+            url = "https://github.com/tfonteyn/"
             metadataSources {
                 artifact()
             }
             patternLayout {
-                artifact "/[module]/releases/download/v[revision]/" +
-                        "[module]-[classifier]-[revision].[ext]"
+                artifact("/[module]/releases/download/v[revision]/" +
+                        "[module]-[classifier]-[revision].[ext]")
             }
         }
     }
 }
 
 rootProject.name = "NeverTooManyBooks"
-include ':app'
-include ':fastscroller'
-include ':repacked-org-json'
-include ':core'
+include(":app")
+include(":fastscroller")
+include(":repacked-org-json")
+include(":core")
