--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ plugins {
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.8.21" apply false
     // https://github.com/mannodermaus/android-junit5
-    id("de.mannodermaus.android-junit5") version "1.8.2.1" apply false
+    // Don't forget to update ext.mannodermaus_version
+    id("de.mannodermaus.android-junit5") version "1.9.3.0" apply false
 }
 
 tasks.register("clean", Delete) {
@@ -112,5 +113,5 @@ ext {
     // needed for testing
     kotlinx_coroutines_core = "1.5.2"
 
-    mannodermaus_version = "1.3.0"
+    mannodermaus_version = "1.9.3.0"
 }
