--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,8 @@ android {
                             .format(DateTimeFormatter.ISO_LOCAL_DATE_TIME) + "\"")
 
             // under development
+            buildConfigField("boolean", "ENABLE_BOOKFINDER", "false")
+            // under development
             buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "false")
             // under development
             buildConfigField("boolean", "EMBEDDED_BARCODE_SCANNER", "false")
@@ -146,6 +148,8 @@ android {
             resValue("string", "fileProviderAuthority",
                     "${applicationId}.GenericFileProvider.debug")
 
+            // under development
+            buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
             // under development
             buildConfigField("boolean", "ENABLE_STRIP_INFO_LOGIN", "true")
             // under development
