--- a/build.gradle
+++ b/build.gradle
@@ -56,18 +56,18 @@ ext {
     // https://developer.android.com/jetpack/androidx/versions
 
     // 1.8 needs Android 14 !
-    androidx_activity_version = "1.7.1"
+    androidx_activity_version = "1.7.2"
 
     androidx_annotation_version = "1.6.0"
     androidx_appcompat_version = "1.7.0-alpha02"
-    androidx_collection_version = "1.3.0-alpha04"
-    androidx_camerax_version = "1.3.0-alpha06"
+    androidx_camerax_version = "1.3.0-alpha07"
     androidx_cardview_version = "1.0.0"
-    androidx_constraintlayout_core_version = "1.1.0-alpha09"
-    androidx_constraintlayout_version = "2.2.0-alpha09"
+    androidx_collection_version = "1.3.0-alpha04"
+    androidx_constraintlayout_core_version = "1.1.0-alpha10"
+    androidx_constraintlayout_version = "2.2.0-alpha10"
     androidx_coordinatorlayout_version = "1.2.0"
     // 1.12 needs Android 14 !
-    androidx_core_version = "1.11.0-alpha02"
+    androidx_core_version = "1.11.0-beta01"
     androidx_customview_version = "1.2.0-alpha02"
     androidx_documentfile_version = "1.1.0-alpha01"
     androidx_drawerlayout_version = "1.2.0"
@@ -76,9 +76,9 @@ ext {
     androidx_interpolator_version = "1.0.0"
     androidx_lifecycle_version = "2.6.1"
     androidx_preference_version = "1.2.0"
-    androidx_recyclerview_version = "1.3.0"
+    androidx_recyclerview_version = "1.3.1-rc01"
 //        androidx_slidingpanelayout_version = "1.2.0"
-    androidx_viewpager2_version = "1.1.0-beta01"
+    androidx_viewpager2_version = "1.1.0-beta02"
     androidx_window_version = "1.1.0-rc01"
 
     // https://github.com/material-components/material-components-android/releases
