--- a/build.gradle
+++ b/build.gradle
@@ -67,19 +67,19 @@ ext {
     androidx_constraintlayout_version = "2.2.0-alpha10"
     androidx_coordinatorlayout_version = "1.2.0"
     // 1.12 needs Android 14 !
-    androidx_core_version = "1.11.0-beta01"
+    androidx_core_version = "1.11.0-beta02"
     androidx_customview_version = "1.2.0-alpha02"
     androidx_documentfile_version = "1.1.0-alpha01"
     androidx_drawerlayout_version = "1.2.0"
     androidx_exifinterface_version = "1.3.6"
-    androidx_fragment_version = "1.6.0-rc01"
+    androidx_fragment_version = '1.6.0'
     androidx_interpolator_version = "1.0.0"
     androidx_lifecycle_version = "2.6.1"
     androidx_preference_version = "1.2.0"
     androidx_recyclerview_version = "1.3.1-rc01"
 //        androidx_slidingpanelayout_version = "1.2.0"
     androidx_viewpager2_version = "1.1.0-beta02"
-    androidx_window_version = "1.1.0-rc01"
+    androidx_window_version = '1.1.0'
 
     // https://github.com/material-components/material-components-android/releases
     google_material_version = "1.9.0"
@@ -111,7 +111,7 @@ ext {
     androidx_test_rules_version = "1.5.0"
 
     // needed for testing
-    kotlinx_coroutines_core = "1.5.2"
+    kotlinx_coroutines_core = '1.7.1'
 
     mannodermaus_version = "1.3.0"
 }
