--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,6 +17,7 @@
  * You should have received a copy of the GNU General Public License
  * along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
  */
+//file:noinspection LongLine
 
 plugins {
     id("com.android.library")
@@ -89,8 +90,7 @@ dependencies {
 
     implementation("androidx.appcompat:appcompat:${androidx_appcompat_version}")
     // core is needed for custom constraint helpers
-    implementation("androidx.constraintlayout:constraintlayout-core:"
-            + "${androidx_constraintlayout_core_version}")
+    implementation("androidx.constraintlayout:constraintlayout-core:${androidx_constraintlayout_core_version}")
 
     implementation("androidx.documentfile:documentfile:${androidx_documentfile_version}")
     implementation("androidx.preference:preference:${androidx_preference_version}")
@@ -114,6 +114,5 @@ dependencies {
     androidTestImplementation("androidx.test:runner:${androidx_test_runner_version}")
     androidTestImplementation("androidx.test:rules:${androidx_test_rules_version}")
 
-    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:" +
-            "${kotlinx_coroutines_core}")
+    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinx_coroutines_core}")
 }
