--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id("com.android.application") version '8.0.2' apply false
-    id("com.android.library") version '8.0.2' apply false
+    id("com.android.application") version "8.0.2" apply false
+    id("com.android.library") version "8.0.2" apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.8.21" apply false
     // https://github.com/mannodermaus/android-junit5
@@ -72,14 +72,14 @@ ext {
     androidx_documentfile_version = "1.1.0-alpha01"
     androidx_drawerlayout_version = "1.2.0"
     androidx_exifinterface_version = "1.3.6"
-    androidx_fragment_version = '1.6.0'
+    androidx_fragment_version = "1.6.0"
     androidx_interpolator_version = "1.0.0"
     androidx_lifecycle_version = "2.6.1"
     androidx_preference_version = "1.2.0"
     androidx_recyclerview_version = "1.3.1-rc01"
 //        androidx_slidingpanelayout_version = "1.2.0"
     androidx_viewpager2_version = "1.1.0-beta02"
-    androidx_window_version = '1.1.0'
+    androidx_window_version = "1.1.0"
 
     // https://github.com/material-components/material-components-android/releases
     google_material_version = "1.9.0"
@@ -111,7 +111,7 @@ ext {
     androidx_test_rules_version = "1.5.0"
 
     // needed for testing
-    kotlinx_coroutines_core = '1.7.1'
+    kotlinx_coroutines_core = "1.7.1"
 
     mannodermaus_version = "1.3.0"
 }
