--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ ext {
 
     androidx_annotation_version = "1.6.0"
     androidx_appcompat_version = "1.7.0-alpha02"
-    androidx_camerax_version = "1.3.0-alpha07"
+    androidx_camerax_version = '1.3.0-beta01'
     androidx_cardview_version = "1.0.0"
     androidx_collection_version = "1.3.0-alpha04"
     androidx_constraintlayout_core_version = "1.1.0-alpha10"
@@ -96,10 +96,10 @@ ext {
     zxing_core_version = "3.5.1"
 
     // https://github.com/ACRA/acra
-    acra_version = "5.9.7"
+    acra_version = '5.10.1'
 
     // https://github.com/mockito/mockito
-    mockito_version = "5.3.1"
+    mockito_version = '5.4.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
     jupiter_version = "5.9.3"
