enable experimental engine in beta / disable in release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,7 +118,7 @@ android {
                             .format(DateTimeFormatter.ISO_LOCAL_DATE_TIME) + "\"")
 
             // under development
-            buildConfigField("boolean", "ENABLE_BERTRAND_PT", "true")
+            buildConfigField("boolean", "ENABLE_BERTRAND_PT", "false")
             // under development
             buildConfigField("boolean", "ENABLE_BOOKFINDER", "false")
             // under development
@@ -140,6 +140,11 @@ android {
                     "${applicationId}.SearchSuggestionProvider.beta")
             resValue("string", "fileProviderAuthority",
                     "${applicationId}.GenericFileProvider.beta")
+
+            // under development
+            buildConfigField("boolean", "ENABLE_BERTRAND_PT", "true")
+            // under development
+            buildConfigField("boolean", "ENABLE_BOOKFINDER", "true")
         }
         debug {
             debuggable = true
