--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -18,9 +18,9 @@
 # along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
 #
 
-#Thu Jun 08 10:33:24 BST 2023
+#Sat Jul 01 19:16:40 BST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-rc-2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
