--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id("com.android.application") version "8.0.2" apply false
     id("com.android.library") version "8.0.2" apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
-    id("org.jetbrains.kotlin.android") version "1.8.21" apply false
+    id("org.jetbrains.kotlin.android") version "1.9.0" apply false
     // https://github.com/mannodermaus/android-junit5
     // Don't forget to update ext.mannodermaus_version
     id("de.mannodermaus.android-junit5") version "1.9.3.0" apply false
@@ -60,12 +60,15 @@ ext {
     androidx_activity_version = "1.7.2"
 
     androidx_annotation_version = "1.6.0"
-    androidx_appcompat_version = "1.7.0-alpha02"
-    androidx_camerax_version = '1.3.0-beta01'
+    // 1.7 needs Android 14 !
+    androidx_appcompat_version = '1.6.1'
+    // 1.3 needs Android 14 !
+    androidx_camerax_version = '1.2.3'
     androidx_cardview_version = "1.0.0"
     androidx_collection_version = "1.3.0-alpha04"
-    androidx_constraintlayout_core_version = "1.1.0-alpha10"
-    androidx_constraintlayout_version = "2.2.0-alpha10"
+    androidx_constraintlayout_core_version = '1.0.4'
+    // 2.2 needs Android 14 !
+    androidx_constraintlayout_version = '2.1.4'
     androidx_coordinatorlayout_version = "1.2.0"
     // 1.12 needs Android 14 !
     androidx_core_version = "1.11.0-beta02"
@@ -73,11 +76,11 @@ ext {
     androidx_documentfile_version = "1.1.0-alpha01"
     androidx_drawerlayout_version = "1.2.0"
     androidx_exifinterface_version = "1.3.6"
-    androidx_fragment_version = "1.6.0"
+    androidx_fragment_version = '1.6.1'
     androidx_interpolator_version = "1.0.0"
     androidx_lifecycle_version = "2.6.1"
-    androidx_preference_version = "1.2.0"
-    androidx_recyclerview_version = "1.3.1-rc01"
+    androidx_preference_version = '1.2.1'
+    androidx_recyclerview_version = '1.3.1'
 //        androidx_slidingpanelayout_version = "1.2.0"
     androidx_viewpager2_version = "1.1.0-beta02"
     androidx_window_version = "1.1.0"
@@ -94,16 +97,16 @@ ext {
     tiny_zxing_wrapper_version = "1.0.0"
 
     // https://github.com/zxing/zxing
-    zxing_core_version = "3.5.1"
+    zxing_core_version = '3.5.2'
 
     // https://github.com/ACRA/acra
-    acra_version = '5.10.1'
+    acra_version = '5.11.0'
 
     // https://github.com/mockito/mockito
     mockito_version = '5.4.0'
 
     // https://junit.org/junit5/docs/current/user-guide/#overview
-    jupiter_version = "5.9.3"
+    jupiter_version = '5.10.0'
 
     // https://developer.android.com/jetpack/androidx/releases/test
     androidx_arch_core_testing = "2.2.0"
@@ -112,7 +115,7 @@ ext {
     androidx_test_rules_version = "1.5.0"
 
     // needed for testing
-    kotlinx_coroutines_core = "1.6.4"
+    kotlinx_coroutines_core = "1.6.1"
 
     mannodermaus_version = "1.3.0"
 }
