--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@
  */
 
 plugins {
-    id("com.android.application") version "8.0.2" apply false
-    id("com.android.library") version "8.0.2" apply false
+    id("com.android.application") version '8.1.0' apply false
+    id("com.android.library") version '8.1.0' apply false
     // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android
     id("org.jetbrains.kotlin.android") version "1.9.0" apply false
     // https://github.com/mannodermaus/android-junit5
@@ -114,8 +114,8 @@ ext {
     androidx_test_runner_version = "1.5.2"
     androidx_test_rules_version = "1.5.0"
 
-    // needed for testing
-    kotlinx_coroutines_core = "1.6.1"
+    // needed for testing; due to internal android [wtf] this MUST be 1.6.1 for now
+    kotlinx_coroutines_android = "1.6.1"
 
     mannodermaus_version = "1.3.0"
 }
